--- a/ui/calendar.reel/calendar-widget.reel/month-view.reel/month-view.css
+++ b/ui/calendar.reel/calendar-widget.reel/month-view.reel/month-view.css
@@ -2,4 +2,5 @@
   height: 100%;
   table-layout: fixed;
   margin-bottom: 0;
+  text-align: center;
 }
